Вроде работает, исправил ошибки