@@ -13,7 +13,8 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <javafx.version>21.0.6</javafx.version>
+        <!-- Обновляем до последней версии JavaFX -->
+        <javafx.version>23.0.1</javafx.version>
     </properties>
 
     <dependencies>
@@ -35,7 +36,12 @@
             <version>3.44.1.0</version>
         </dependency>
 
-        <!-- Добавляем SLF4J для убирания предупреждений логирования -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>2.0.9</version>
+        </dependency>
+
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
@@ -50,13 +56,10 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
                 <configuration>
-                    <mainClass>ru.fixbyte.Main</mainClass>
-                    <!-- Добавляем опции для убирания WARNING -->
+                    <mainClass>ru. fixbyte.Main</mainClass>
                     <options>
                         <option>--enable-native-access=javafx.graphics</option>
                         <option>--enable-native-access=org.xerial.sqlitejdbc</option>
-                        <option>--add-opens</option>
-                        <option>javafx.graphics/com.sun.glass.ui=ALL-UNNAMED</option>
                     </options>
                 </configuration>
             </plugin>
